--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "errsole": "^1.4.0",
     "express": "~4.16.1",
     "sequelize": "^6.31.0",
     "sequelize-cli": "^6.6.0",
