--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name todo-express.errsole.com;
+  server_name todo-express-8080.errsole.com;
 
   location / {
     proxy_pass http://localhost:8080;
