--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,9 @@
 server {
   listen 80;
-  server_name todo-express.errsole.com;
+  server_name todo-express-8081.errsole.com;
 
   location / {
-    proxy_pass http://localhost:8080;
+    proxy_pass http://localhost:8081;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
