--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "prestart": "npm install && node_modules/.bin/sequelize db:migrate",
-    "start": "forever start --id 'todo-express' app.js"
+    "start": "pm2 start app.js --name=todo-express-errsole",
+    "stop": "pm2 delete todo-express-errsole"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
